--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,10 @@ hpack = "0.3"
 log = "^0.3"
 
 [dependencies.openssl]
-version = "0.7"
-features = ["tlsv1_2", "npn"]
+version = "0.9"
+features = []
 optional = true
 
 [features]
 live_tests = []
-tls = ["openssl", "openssl/tlsv1_2", "openssl/npn"]
+tls = ["openssl"]
